// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H3 Element applies lightWeight modifier 1`] = `
.c0 {
  font-size: 2rem;
  margin: 0;
  text-transform: capitalize;
  font-weight: 300;
}

<h3
  className="c0"
>
  Header Element
</h3>
`;

exports[`H3 Element renders correctly 1`] = `
.c0 {
  font-size: 2rem;
  margin: 0;
  text-transform: capitalize;
}

<h3
  className="c0"
>
  Header Element
</h3>
`;
